[gd_scene load_steps=8 format=3 uid="uid://ch5a43uyl6iql"]

[ext_resource type="Script" path="res://Menu/Scripts/pause_menu.gd" id="1_lkxp8"]
[ext_resource type="Shader" path="res://Menu/pause_menu.gdshader" id="2_2o12h"]
[ext_resource type="PackedScene" uid="uid://xqmbygw0vs75" path="res://Menu/OptionsMenu.tscn" id="2_wa5k8"]
[ext_resource type="AudioStream" uid="uid://dmw6d3pohhcey" path="res://Music/UI Audio/select_001.ogg" id="3_0edf5"]
[ext_resource type="PackedScene" uid="uid://bke034tyehh1s" path="res://Menu/players_hud_container.tscn" id="5_f4s4m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ij7sq"]
shader = ExtResource("2_2o12h")
shader_parameter/amount = 4.0

[sub_resource type="SystemFont" id="SystemFont_82vv5"]
font_names = PackedStringArray("Consolas")
subpixel_positioning = 0

[node name="PauseMenu" type="Control" groups=["Menus"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lkxp8")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ij7sq")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_82vv5")
theme_override_font_sizes/font_size = 64
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Resume"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Options"

[node name="MainMenuButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_wa5k8")]
visible = false
layout_mode = 1

[node name="ButtonPressStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0edf5")
bus = &"UI"

[node name="PlayerContainer" parent="." instance=ExtResource("5_f4s4m")]
layout_mode = 1
